hphp/test/zend/good/ext/xsl/tests/xslt010.php.skipif
<?hh 

<<__EntryPoint>> function skip(): void {
  if (!extension_loaded('xsl')) die('skip xsl extension not available');
  $proc = new xsltprocessor();
  if (!$proc->hasExsltSupport()) die('skip EXSLT support not available');
}
